[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/shipthis/wizards/android/steps/Step4ServiceAccount.gd" id="1_step"]

[node name="Step4ServiceAccount" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_step")

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Loading..."

[node name="ContentContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="StatusMessage" type="Label" parent="ContentContainer"]
layout_mode = 2
text = "Creating a Service Account and API Key..."

[node name="Spacer1" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="ContentContainer"]
visible = false
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="ContentContainer/ProgressContainer"]
layout_mode = 2
max_value = 100.0
value = 0.0

[node name="ProgressLabel" type="Label" parent="ContentContainer/ProgressContainer"]
layout_mode = 2
text = "0%"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="StatusTable" type="VBoxContainer" parent="ContentContainer"]
visible = false
layout_mode = 2

[node name="StatusTableTitle" type="Label" parent="ContentContainer/StatusTable"]
layout_mode = 2
text = "Setup Progress:"

[node name="Spacer3" type="Control" parent="ContentContainer/StatusTable"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="RowSignedIn" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] Signed In"

[node name="RowProjectCreated" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] Project Created"

[node name="RowServiceAccount" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] Service Account Created"

[node name="RowKeyCreated" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] Key Created"

[node name="RowKeyUploaded" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] Key Uploaded"

[node name="RowApiEnabled" type="RichTextLabel" parent="ContentContainer/StatusTable"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[ ] API Enabled"

[node name="PolicyContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="PolicyNotice" type="RichTextLabel" parent="PolicyContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Spacer4" type="Control" parent="PolicyContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="RevokeButton" type="Button" parent="PolicyContainer"]
layout_mode = 2
text = "Revoke Policy and Continue"

[node name="ErrorLabel" type="Label" parent="."]
visible = false
layout_mode = 2
